# cortex-staking-api

./: Cargo.toml  README.md
crates/api/: Cargo.toml
crates/api/src/: config.rs  errors.rs  lib.rs  main.rs  pagination.rs  state.rs
crates/api/src/docs/: admin.rs  health.rs
crates/api/src/extractors/: auth.rs  request_id.rs
crates/api/src/middleware/: request_id.rs
crates/api/src/routes/: health.rs  monad.rs
crates/api/src/routes/admin/: api_keys.rs  mod.rs  organizations.rs  users.rs
crates/api/src/routes/monad/: data.rs  mod.rs  transactions.rs
crates/api/tests/: auth_routes.rs
crates/auth/: Cargo.toml
crates/auth/src/: api_key.rs  extractor.rs  lib.rs  model.rs
crates/chains/monad/: Cargo.toml
crates/chains/monad/src/: client.rs  data.rs  lib.rs  model.rs  transactions.rs
crates/db/: Cargo.toml
crates/db/src/: api_key_repository.rs  audit_repository.rs  auth_repository.rs  lib.rs  organization_repository.rs  pagination.rs  user_repository.rs
crates/services/: Cargo.toml
crates/services/src/: api_key_service.rs  audit_actions.rs  audit_service.rs  lib.rs  monad_service.rs  organization_service.rs  rate_limiter.rs  user_service.rs
dev/: seed_dev.sql
migrations/: 0002_create_audit_logs.sql
