[package]
name = "cortex-staking-api"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
actix-cors.workspace = true
actix-web.workspace = true
anyhow.workspace = true
dotenvy.workspace = true
futures-util.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
uuid.workspace = true

cortex-auth = { path = "../auth" }
cortex-chain-monad = { path = "../chains/monad" }
cortex-core = { path = "../core" }
cortex-db = { path = "../db" }
cortex-services = { path = "../services" }