[package]
name = "cortex-services"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true

cortex-auth = { path = "../auth" }
cortex-chain-monad = { path = "../chains/monad" }
cortex-db = { path = "../db" }